# pythonHooks

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
python_hooks/: __init__.py  prepare-commit-message.py
