[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'python_hooks'
version = "0.1.0"
description = 'Simply python hooks for pre-commit'
authors = [{name = 'QA Automation'}]
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[tool.pytest.ini_options]
testpaths = 'tests'
